# learn-haskell

./: .gitignore  CLAUDE.md  learn-haskell.cabal
99-problems/: p01.hs  p02.hs  p03.hs  p04.hs  p05.hs
