cabal-version:       2.2

name:                learn-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/learn-haskell#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

common warnings
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable learn-haskell
  import:              warnings
  hs-source-dirs:      src
  main-is:             Main.hs

executable p01
  import:              warnings
  hs-source-dirs:      99-problems
  main-is:             p01.hs

source-repository head
  type:     git
  location: https://github.com/githubuser/learn-haskell
